# moda-automation

./: .gitignore  pyproject.toml
src/: config_api.py  moda.py
web/: dev  package.json  pnpm-lock.yaml  server.js
web/scripts/: start_server.sh  start_tailwind.sh
web/src/: index.html  script.js
web/src/css/: output.css  styles.css
web/src/video/: auth.js  cookieStore.js  index.html  login.html  login.js  vid.html  vid.js  video.js
